# EfmGate

./: .gitignore  .gitmodules  EfmGate.py  EfmLSTM.py  Notebook_sig.ipynb  README.md  data.py  pyproject.toml  train_test.py
Test/: train.py
experiments/: __init__.py  train.py
notebooks/: Untitled.ipynb  notebook_sig.ipynb  notebooks.py
src/efmgate/: __init__.py
src/efmgate/data/: __init__.py
src/efmgate/data_utils/: __init__.py  preprocessing.py
src/efmgate/models/: __init__.py  efm_gate.py  sig_gate.py
